--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://Rishabh:RishabH3821@cluster0.if8ukjq.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=
 PORT=5000
-JWT_KEY=dejavu
+JWT_KEY=
