--- a/client/vercel.json
+++ b/client/vercel.json
@@ -5,6 +5,6 @@
   ],
   "routes": [
     { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/index.html" }
+    { "src": "/.*", "dest": "/page.js" }
   ]
 }
