--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,9 +1,6 @@
 {
   "version": 2,
   "builds": [
-    { "src": "next.config.js", "use": "@vercel/next" }
-  ],
-  "routes": [
-    { "src": "/.+*", "dest": "/page.js" }
+    { "src": "next.config.mjs", "use": "@vercel/next" }
   ]
 }
