--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,6 +1,13 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "next.config.js", "use": "@vercel/next" }
+  "routes": [
+    {
+      "src": "/app/page",
+      "dest": "/client/app/page.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/client/$1"
+    }
   ]
 }
